<resources>
    <string name="app_name">OpenAirGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success">Success</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="loading">Loading</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>