<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoImage"
                android:layout_width="350dp"
                android:layout_height="206dp"
                android:layout_marginTop="30dp"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_map_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="#880808"
                app:strokeWidth="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="80dp"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImage">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHighlight="#7cff88"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_margin="20dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHighlight="#7cff88"
                    android:textSize="24sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/signInButton"
                android:layout_width="337dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/registerInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
                app:layout_constraintVertical_bias="0.0"
                app:pb_colorComplete="@color/green_complete"
                app:pb_colorNormal="@color/blue_normal"
                app:pb_colorPressed="@color/blue_pressed"
                app:pb_colorProgress="@color/purple_progress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="Loading" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/registerButton"
                android:layout_width="295dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:pb_colorComplete="@color/green_complete"
                app:pb_colorNormal="@color/blue_normal"
                app:pb_colorPressed="@color/blue_pressed"
                app:pb_colorProgress="@color/purple_progress"
                app:pb_textComplete="@string/success"
                app:pb_textProgress="@string/loading" />

            <TextView
                android:id="@+id/registerInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</FrameLayout>